# ukaiforum_inspect_workshop

./: .env.example  README.md  TUTORIAL.md  pyproject.toml  requirements.txt
scripts/: dataset_writer.py  log_dataframe_printout.py  log_file_printout.py
ukaiforum_inspect/: chained_solver_task.py  chained_task.py  dataset.py  react_task.py  scorer.py  scorer_task.py  simple_task.py  solver.py  system_prompt.py  tools.py  tools_task.py
ukaiforum_inspect/prompts/: system.py
