[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ukaiforum-inspect"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "inspect_ai==0.3.146",
    "inspect_wandb[weave]==0.2.0",
    "inspect_evals==0.3.102",
    "openai==2.8.0",
    "anthropic==0.73.0"
]

[tool.setuptools.packages.find]
include = ["ukaiforum_inspect*"]
